# Rust-Programming

./: .gitignore
ethical-ransomware/: Cargo.toml
ethical-ransomware/sample-folder-to-encrypt/: sample.rs
ethical-ransomware/src/: main.rs
mid-term-assignment/: Cargo.toml
mid-term-assignment/src/: main.rs
port_scanner/: Cargo.toml
port_scanner/src/: main.rs
project-1-encryption-tool/: Cargo.toml  README.md
project-1-encryption-tool/src/: main.rs
project-2/: Cargo.toml  pc.service
project-2/src/: input.rs  main.rs
project-5-enc-dec-folder/: Cargo.toml
project-5-enc-dec-folder/sample-folder-to-encrypt/: sample.rs
project-5-enc-dec-folder/src/: main.rs
worm-ftp/: Cargo.toml  group8.txt
worm-ftp/src/: crypto.rs  main.rs  run.rs  spread.rs
