[package]
name = "worm-ftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.1"
async_ftp = "6.0.0"
tokio = { version = "1.33.0", features = ["full"] }
reqwest = "0.11.22"
windows-service = "0.6.0"
once_cell = "1.18.0"
walkdir = "2.4.0"